; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_analyze.c_analyze_requires_snapshot.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_analyze.c_analyze_requires_snapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @analyze_requires_snapshot(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @nodeTag(i32 %6)
  switch i32 %7, label %10 [
    i32 130, label %8
    i32 132, label %8
    i32 128, label %8
    i32 129, label %8
    i32 133, label %9
    i32 131, label %9
    i32 134, label %9
  ]

8:                                                ; preds = %1, %1, %1, %1
  store i32 1, i32* %3, align 4
  br label %11

9:                                                ; preds = %1, %1, %1
  store i32 1, i32* %3, align 4
  br label %11

10:                                               ; preds = %1
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %10, %9, %8
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @nodeTag(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
